--- a/pkg/pool-utils/package.json
+++ b/pkg/pool-utils/package.json
@@ -26,7 +26,8 @@
     "test": "yarn compile && mocha --extension ts --require hardhat/register --require @balancer-labs/v2-common/setupTests --recursive",
     "test:fast": "yarn compile && mocha --extension ts --require hardhat/register --require @balancer-labs/v2-common/setupTests --recursive --parallel --exit",
     "test:watch": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
-    "test-fuzz": "forge test"
+    "test-fuzz": "forge test",
+    "test-fuzz:intense": "FOUNDRY_FUZZ_RUNS=100000 FOUNDRY_FUZZ_MAX_TEST_REJECTS=600000 forge test"
   },
   "devDependencies": {
     "@balancer-labs/v2-common": "workspace:*",
