--- a/pkg/solidity-utils/package.json
+++ b/pkg/solidity-utils/package.json
@@ -25,7 +25,8 @@
     "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0",
     "test": "yarn compile && mocha --extension ts --require hardhat/register --require @balancer-labs/v2-common/setupTests --recursive",
     "test:watch": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
-    "test-fuzz": "forge test"
+    "test-fuzz": "forge test",
+    "test-fuzz:intense": "FOUNDRY_FUZZ_RUNS=100000 FOUNDRY_FUZZ_MAX_TEST_REJECTS=600000 forge test"
   },
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
