Update hardhat verifier

--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -34,7 +34,7 @@
     "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
-    "@nomiclabs/hardhat-etherscan": "latest",
+    "@nomiclabs/hardhat-etherscan": "^3.1.2",
     "@solidity-parser/parser": "^0.14.0",
     "@types/lodash": "^4.14.181",
     "@types/lodash.range": "^3",
