--- a/pkg/governance-scripts/package.json
+++ b/pkg/governance-scripts/package.json
@@ -51,8 +51,8 @@
     "hardhat-ignore-warnings": "^0.2.4",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.24",
+    "prettier": "^2.1.2",
+    "prettier-plugin-solidity": "v1.0.0-alpha.59",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^10.9.1",
