--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -34,24 +34,24 @@
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.2",
-    "@solidity-parser/parser": "^0.14.0",
-    "@types/lodash": "^4.14.181",
-    "@types/lodash.range": "^3",
-    "@types/node": "^14.6.0",
+    "@solidity-parser/parser": "^0.14.5",
+    "@types/lodash": "^4.14.186",
+    "@types/lodash.range": "^3.2.7",
+    "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "eslint": "^7.9.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "ethers": "^5.4.1",
+    "ethers": "^5.7.2",
     "hardhat": "^2.12.2",
-    "hardhat-local-networks-config-plugin": "0.0.5",
+    "hardhat-local-networks-config-plugin": "^0.0.6",
     "lodash.range": "^3.2.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.1.2",
-    "ts-node": "^8.10.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
