--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "engines": {
     "node": ">=14.18.0 <15"
   },
+  "packageManager": "yarn@3.2.4",
   "contributors": [
     "Daniel Fernandez <daniel@balancer.finance>",
     "Facu Spagnuolo <facu@balancer.finance>",
