--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -20,7 +20,7 @@
     "dist/"
   ],
   "scripts": {
-    "build": "yarn build-address-lookup && tsc",
+    "build": "tsc",
     "check": "yarn check-artifacts && yarn check-deployments",
     "check-artifacts": "hardhat check-artifacts",
     "check-deployments": "hardhat check-deployments --network mainnet && hardhat check-deployments --network polygon && hardhat check-deployments --network arbitrum && hardhat check-deployments --network optimism && hardhat check-deployments --network goerli && hardhat check-deployments --network gnosis && hardhat check-deployments --network bsc",
