--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,13 +2,4 @@ nodeLinker: node-modules
 
 npmPublishAccess: public
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-
-yarnPath: .yarn/releases/yarn-3.3.0.cjs
-checksumBehavior: "update"
+yarnPath: .yarn/releases/yarn-4.0.0-rc.32.cjs
