--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "engines": {
     "node": ">=18 <19"
   },
-  "packageManager": "yarn@3.3.0",
+  "packageManager": "yarn@4.0.0-rc.32",
   "contributors": [
     "Daniel Fernandez <daniel@balancer.finance>",
     "Facu Spagnuolo <facu@balancer.finance>",
