Add balancer js as dependencies for common and helpers.

--- a/pvt/common/package.json
+++ b/pvt/common/package.json
@@ -9,6 +9,7 @@
     "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
   },
   "dependencies": {
+    "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "typescript": "^4.0.2"
