--- a/pvt/helpers/package.json
+++ b/pvt/helpers/package.json
@@ -9,6 +9,7 @@
     "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
   },
   "dependencies": {
+    "@balancer-labs/balancer-js": "workspace:*",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@types/lodash": "^4.14.186",
