--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -57,7 +57,7 @@
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@ethersproject/contracts": "^5.0.0",
     "hardhat": "^2.8.3"
   }
 }
