chore: prevent src directory from being included in package

--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -17,7 +17,8 @@
   "browser": "dist/index.umd.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist/"
+    "/dist/index.*",
+    "/dist/{addresses,tasks}/**/*"
   ],
   "scripts": {
     "build": "tsc",
