--- a/pkg/solidity-utils/package.json
+++ b/pkg/solidity-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@balancer-labs/v2-solidity-utils",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Solidity libraries and utilities",
   "license": "GPL-3.0-only",
   "homepage": "https://github.com/balancer-labs/balancer-v2-monorepo/tree/master/pkg/solidity-utils#readme",
@@ -27,11 +27,13 @@
     "test:watch": "nodemon --ext js,ts --watch test --watch lib --exec 'clear && yarn test --no-compile'",
     "test-fuzz": "forge test"
   },
+  "dependencies": {
+    "@balancer-labs/v2-interfaces": "workspace:*"
+  },
   "devDependencies": {
     "@balancer-labs/balancer-js": "workspace:*",
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
-    "@balancer-labs/v2-interfaces": "workspace:*",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/chai": "^4.3.3",
