--- a/pkg/pool-utils/package.json
+++ b/pkg/pool-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@balancer-labs/v2-pool-utils",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Utilities for creating Balancer V2 Pools",
   "license": "GPL-3.0-only",
   "homepage": "https://github.com/balancer-labs/balancer-v2-monorepo/tree/master/pkg/pool-utils#readme",
@@ -30,12 +30,12 @@
   },
   "dependencies": {
     "@balancer-labs/v2-interfaces": "workspace:*",
-    "@balancer-labs/v2-solidity-utils": "workspace:*",
-    "@balancer-labs/v2-vault": "workspace:*"
+    "@balancer-labs/v2-solidity-utils": "workspace:*"
   },
   "devDependencies": {
     "@balancer-labs/v2-common": "workspace:*",
     "@balancer-labs/v2-helpers": "workspace:*",
+    "@balancer-labs/v2-vault": "workspace:*",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
