--- a/pkg/pool-secondary-issues/package.json
+++ b/pkg/pool-secondary-issues/package.json
@@ -54,6 +54,7 @@
     "ethereum-waffle": "^3.0.2",
     "ethers": "^5.4.1",
     "hardhat": "^2.8.3",
+    "hardhat-gas-reporter": "^1.0.9",
     "lodash.frompairs": "^4.0.1",
     "lodash.pick": "^4.4.0",
     "lodash.range": "^3.2.0",
