add: changes and fixes for gas optimization

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ cache/
 dist/
 pkg/balancer-js/src/typechain/*
 
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
