--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -29,7 +29,9 @@
     "check-action-ids": "hardhat check-action-ids --network mainnet && hardhat check-action-ids --network polygon && hardhat check-action-ids --network arbitrum && hardhat check-action-ids --network optimism && hardhat check-action-ids --network gnosis && hardhat check-action-ids --network bsc",
     "extract-artifacts": "hardhat extract-artifacts",
     "build-address-lookup": "hardhat build-address-lookup --network mainnet && hardhat build-address-lookup --network polygon && hardhat build-address-lookup --network arbitrum && hardhat build-address-lookup --network optimism && hardhat build-address-lookup --network goerli && hardhat build-address-lookup --network gnosis && hardhat build-address-lookup --network bsc",
-    "lint": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0",
+    "lint": "yarn lint:solidity && yarn lint:typescript",
+    "lint:solidity": "solhint 'tasks/**/*.sol'",
+    "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0",
     "prepack": "yarn build",
     "test": "yarn build && hardhat test ./**/test/*.ts",
     "ci:prepare-config": "ts-node ci/prepare-config.ts"
@@ -56,6 +58,9 @@
     "lodash.range": "^3.2.0",
     "node-fetch": "^2.6.7",
     "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "v1.0.0-alpha.59",
+    "solhint": "^3.2.0",
+    "solhint-plugin-prettier": "^0.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.0.2"
   },
