--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -25,6 +25,7 @@
     "compile": "tsc && hardhat compile && rm -rf artifacts/build-info",
     "check": "yarn check-artifacts && yarn check-deployments",
     "check-artifacts": "hardhat check-artifacts",
+    "check-links": "hardhat check-links",
     "check-deployments": "hardhat check-deployments --network mainnet && hardhat check-deployments --network polygon && hardhat check-deployments --network arbitrum && hardhat check-deployments --network optimism && hardhat check-deployments --network goerli && hardhat check-deployments --network gnosis && hardhat check-deployments --network bsc",
     "check-action-ids": "hardhat check-action-ids --network mainnet && hardhat check-action-ids --network polygon && hardhat check-action-ids --network arbitrum && hardhat check-action-ids --network optimism && hardhat check-action-ids --network gnosis && hardhat check-action-ids --network bsc",
     "extract-artifacts": "hardhat extract-artifacts",
