--- a/.github/workflows/deployment-checks.yml
+++ b/.github/workflows/deployment-checks.yml
@@ -69,6 +69,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up environment
         uses: ./.github/actions/setup
+      - name: Compile balancer-js
+        run: yarn workspace @balancer-labs/balancer-js build
       - name: Check Deployment Links
         run: yarn workspace @balancer-labs/v2-deployments check-links
 
