--- a/pkg/interfaces/package.json
+++ b/pkg/interfaces/package.json
@@ -19,9 +19,9 @@
     "build": "yarn compile",
     "compile": "hardhat compile && rm -rf artifacts/build-info",
     "compile:watch": "nodemon --ext sol --exec yarn compile",
-    "lint": "NODE_NO_WARNINGS=1 yarn lint:solidity && yarn lint:typescript",
+    "lint": "yarn lint:solidity && yarn lint:typescript",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
-    "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
+    "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.1",
