--- a/pvt/benchmarks/package.json
+++ b/pvt/benchmarks/package.json
@@ -11,8 +11,8 @@
     "measure-join-exit": "hardhat run joinExit.ts",
     "measure-relayer": "hardhat run relayer.ts",
     "benchmark": "yarn measure-deployment && yarn measure-single-pair && yarn measure-multihop && yarn measure-join-exit && yarn measure-relayer",
-    "lint": "NODE_NO_WARNINGS=1 yarn lint:typescript",
-    "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
+    "lint": "yarn lint:typescript",
+    "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
   },
   "devDependencies": {
     "@balancer-labs/v2-common": "workspace:*",
