Remove warnings from linter (#2341)
* Remove warnings from linter

* Remove warning in packages

* Remove warnings at lint:typescipt

--- a/pkg/interfaces/package.json
+++ b/pkg/interfaces/package.json
@@ -21,7 +21,7 @@
     "compile:watch": "nodemon --ext sol --exec yarn compile",
     "lint": "yarn lint:solidity && yarn lint:typescript",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
-    "lint:typescript": "eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
+    "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.1",
