--- a/pkg/deployments/package.json
+++ b/pkg/deployments/package.json
@@ -34,6 +34,7 @@
     "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0",
     "prepack": "yarn build",
     "test": "yarn build && hardhat test ./**/test/*.ts",
+    "test:fast": "yarn build && hardhat test --parallel ./**/test/*.ts",
     "ci:prepare-config": "ts-node ci/prepare-config.ts"
   },
   "devDependencies": {
