docs: typo in ci config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -238,7 +238,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Forked Network Cache
         # Hardhat caches node requests when working with forked networks (e.g. when querying contract code, storage,
-        # etc.) to save time in future runs. We cache this directory accross runs.
+        # etc.) to save time in future runs. We cache this directory across runs.
         # This cache action is special for a couple reasons, which originate from a) it not occupying much disk size,
         # and b) the cache never being invalid (as past blockchain data is immutable). We therefore:
         #  - save the cache even on action failure (which may be caused due to a timeout), even if this could result in
