Upgrade node to v18.x (#2020)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "url": "https://github.com/balancer-labs/balancer-v2-monorepo/issues"
   },
   "engines": {
-    "node": ">=14.18.0 <15"
+    "node": ">=18 <18.16"
   },
+  "packageManager": "yarn@4.0.0-rc.42",
   "contributors": [
     "Daniel Fernandez <daniel@balancer.finance>",
     "Facu Spagnuolo <facu@balancer.finance>",
@@ -24,7 +25,7 @@
     "Igor Yalovoy <igor@balancerlabs.dev>"
   ],
   "scripts": {
-    "build": "yarn workspaces foreach --parallel --verbose  run build",
+    "build": "yarn workspaces foreach --parallel --verbose run build",
     "lint": "NODE_NO_WARNINGS=1 yarn workspaces foreach --parallel --verbose run lint",
     "test": "yarn workspaces foreach --parallel --verbose run test"
   },
