Prepare zkEVM deployment (#2474)
* Prepare for ZKEVM

* Begin ZKEVM deployment

* non-pool deployments

* LBP factory deployment

* finish LBP + batch relayer

* Managed Pool libraries

* Managed Pool library addresses

* Update pkg/deployments/package.json

* Deploy remaining pools

* docs: catchup on output links

* deploy last straggler!

* fix: add RPC_ENDPOINT to ci.yml

* Update .github/workflows/ci.yml

* Add empty accounts

* Update prepare-config.ts

---------

Co-authored-by: Jeffrey Bennett <endymionjkb@gmail.com>

--- a/.github/workflows/deployment-checks.yml
+++ b/.github/workflows/deployment-checks.yml
@@ -39,6 +39,7 @@ jobs:
           BINANCE_RPC_ENDPOINT: ${{ secrets.BINANCE_INFURA_ENDPOINT }}
           GNOSIS_RPC_ENDPOINT: ${{ secrets.GNOSIS_INFURA_ENDPOINT }}
           AVALANCHE_RPC_ENDPOINT: ${{ secrets.AVALANCHE_INFURA_ENDPOINT }}
+          ZKEVM_RPC_ENDPOINT: ${{ secrets.ZKEVM_INFURA_ENDPOINT }}
           GOERLI_RPC_ENDPOINT: ${{ secrets.GOERLI_INFURA_ENDPOINT }}
           SEPOLIA_RPC_ENDPOINT: ${{ secrets.SEPOLIA_INFURA_ENDPOINT }}
       - name: Check Deployment Addresses
@@ -62,6 +63,7 @@ jobs:
           BINANCE_RPC_ENDPOINT: ${{ secrets.BINANCE_INFURA_ENDPOINT }}
           GNOSIS_RPC_ENDPOINT: ${{ secrets.GNOSIS_INFURA_ENDPOINT }}
           AVALANCHE_RPC_ENDPOINT: ${{ secrets.AVALANCHE_INFURA_ENDPOINT }}
+          ZKEVM_RPC_ENDPOINT: ${{ secrets.ZKEVM_INFURA_ENDPOINT }}
           GOERLI_RPC_ENDPOINT: ${{ secrets.GOERLI_INFURA_ENDPOINT }}
           SEPOLIA_RPC_ENDPOINT: ${{ secrets.SEPOLIA_INFURA_ENDPOINT }}
       - name: Check Action IDs
