--- a/pkg/interfaces/package.json
+++ b/pkg/interfaces/package.json
@@ -16,12 +16,14 @@
     "contracts/**/*"
   ],
   "scripts": {
-    "build": "yarn compile",
-    "compile": "hardhat compile && rm -rf artifacts/build-info",
+    "build": "yarn compile && rm -rf artifacts/build-info",
+    "compile": "hardhat compile",
     "compile:watch": "nodemon --ext sol --exec yarn compile",
     "lint": "yarn lint:solidity && yarn lint:typescript",
     "lint:solidity": "solhint 'contracts/**/*.sol'",
-    "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0"
+    "lint:typescript": "NODE_NO_WARNINGS=1 eslint . --ext .ts --ignore-path ../../.eslintignore  --max-warnings 0",
+    "slither": "yarn compile && bash -c 'source ../../slither/bin/activate && slither --compile-force-framework hardhat --ignore-compile . --config-file ../../.slither.config.json'",
+    "slither:triage": "yarn compile && bash -c 'source ../../slither/bin/activate && slither --compile-force-framework hardhat --ignore-compile . --config-file ../../.slither.config.json --triage-mode'"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.2.1",
