Patch (single flag version): Composable stable pool v5 (#5)
Composable Stable Pool V5 patch.
- Bound invariant calculations
- Single flag for exempt / non-exempt tokens.

--- a/pkg/pool-linear/package.json
+++ b/pkg/pool-linear/package.json
@@ -17,7 +17,7 @@
     "!contracts/test/*"
   ],
   "scripts": {
-    "build": "yarn compile",
+    "build": "",
     "compile": "hardhat compile && rm -rf artifacts/build-info",
     "compile:watch": "nodemon --ext sol --exec yarn compile",
     "lint": "yarn lint:solidity && yarn lint:typescript",
